--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,44 @@
         android:layout_height="50dp"
         android:orientation="horizontal"
         android:background="@color/bottom_bar"
-        android:gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"></LinearLayout>
+        android:gravity="center"
+        android:elevation="2dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:weightSum="1">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_map"
+            android:background="@color/bottom_bar"
+            android:layout_weight="0.25"
+            android:layout_gravity="center"
+            android:onClick="handleMapClicked"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_feed"
+            android:layout_weight="0.25"
+            android:background="@color/bottom_bar"
+            android:layout_gravity="center"
+            android:onClick="handleFeedClicked"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_my_profile"
+            android:layout_weight="0.25"
+            android:background="@color/bottom_bar"
+            android:layout_gravity="center"
+            android:onClick="handleProfileClicked"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_settings"
+            android:layout_weight="0.25"
+            android:background="@color/bottom_bar"
+            android:layout_gravity="center"
+            android:onClick="handleSettingsClicked"/>
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
