--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="com.aroundme.around.LoginActivity">
+    tools:context="com.aroundme.around.controllers.LoginActivity">
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
