--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.aroundme.around.MainActivity">
+    tools:context="com.aroundme.around.controllers.MainActivity">
 
 
     <LinearLayout
@@ -14,45 +14,50 @@
         android:background="@color/bottom_bar"
         android:gravity="center"
         android:elevation="2dp"
+        android:padding="5dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:weightSum="1">
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:src="@drawable/ic_map"
             android:background="@color/bottom_bar"
             android:layout_weight="0.25"
             android:layout_gravity="center"
             android:id="@+id/map_button"
-            android:onClick="handleMapClicked"/>
+            android:onClick="handleMapClicked"
+            android:scaleType="fitCenter"/>
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:src="@drawable/ic_feed"
             android:layout_weight="0.25"
             android:background="@color/bottom_bar"
             android:layout_gravity="center"
             android:id="@+id/feed_button"
-            android:onClick="handleFeedClicked"/>
+            android:onClick="handleFeedClicked"
+            android:scaleType="fitCenter"/>
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:src="@drawable/ic_my_profile"
             android:layout_weight="0.25"
             android:background="@color/bottom_bar"
             android:layout_gravity="center"
             android:id="@+id/profile_button"
-            android:onClick="handleProfileClicked"/>
+            android:onClick="handleProfileClicked"
+            android:scaleType="fitCenter"/>
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:src="@drawable/ic_settings"
             android:layout_weight="0.25"
             android:background="@color/bottom_bar"
             android:layout_gravity="center"
             android:id="@+id/settings_button"
-            android:onClick="handleSettingsClicked"/>
+            android:onClick="handleSettingsClicked"
+            android:scaleType="fitCenter"/>
     </LinearLayout>
 
     <FrameLayout
