--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.aroundme.around.RegisterActivity"
+    tools:context="com.aroundme.around.controllers.RegisterActivity"
     android:orientation="vertical"
     android:gravity="center">
     <Button
@@ -27,7 +27,8 @@
         android:layout_height="wrap_content"
         android:text="or"
         android:layout_marginTop="20dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        />
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
