--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.aroundme.around.FeedFragment">
+    tools:context="com.aroundme.around.controllers.FeedFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
