--- a/app/src/main/res/layout/status_item.xml
+++ b/app/src/main/res/layout/status_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:gravity="center">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -9,8 +10,12 @@
         android:id="@+id/status_ic"
         />
     <TextView
-        android:layout_width="300dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:id="@+id/status_text"/>
+        android:id="@+id/status_text"
+        android:text="filler text"
+        android:textSize="20sp"
+        android:gravity="center"
+        />
 
 </LinearLayout>
