--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.aroundme.around.ProfileFragment">
     <LinearLayout
+        android:id="@+id/fraggy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
