--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -27,20 +27,17 @@
         <LinearLayout
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:weightSum="1"
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_gravity="center"
             android:layout_marginBottom="@dimen/activity_vertical_margin">
             <ImageView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.25"
                 android:src="@drawable/ic_available" />
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.75"
                 android:text="Available"
                 android:textSize="18dp"/>
         </LinearLayout>
@@ -50,6 +47,7 @@
             android:layout_height="wrap_content"
             android:textSize="17dp"
             android:text="About User"
+            android:textStyle="bold"
             android:layout_marginBottom="@dimen/activity_vertical_margin"/>
         <LinearLayout
             android:layout_width="300dp"
