--- a/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/app/src/main/res/layout/fragment_profile_settings.xml
@@ -3,72 +3,114 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.aroundme.around.controllers.ProfileSettingsFragment">
-    <LinearLayout
-        android:id="@+id/fraggy"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_action_name"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
-        <TextView
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:text="Firstname Lastname"
-            android:gravity="center"
-            android:textSize="25sp"
-            android:id="@+id/full_name"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
-        <Spinner
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:id="@+id/status_spinner">
-        </Spinner>
+        android:layout_height="match_parent">
         <LinearLayout
-            android:layout_width="300dp"
+            android:id="@+id/fraggy"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="1"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:id="@+id/status_enter">
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_action_name"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
             <EditText
-                android:layout_width="0dp"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:hint="Enter Status"
-                android:layout_weight="0.75"
-                android:id="@+id/status"/>
+                android:text="Sruti Guhathakurta"
+                android:gravity="center"
+                android:textSize="25sp"
+                android:id="@+id/full_name"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+            <Spinner
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:id="@+id/status_spinner">
+            </Spinner>
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:weightSum="1"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:id="@+id/status_enter">
+                <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter Status"
+                    android:layout_weight="0.75"
+                    android:id="@+id/status"/>
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="OK"
+                    android:layout_weight="0.25"
+                    android:id="@+id/enter_status"
+                    android:onClick="enterStatus"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginBottom="@dimen/activity_vertical_margin">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="University:"
+                    android:textStyle="bold"
+                    />
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Georgia Institute of Technology"
+                    android:textSize="15sp"
+                    android:id="@+id/universityTV"
+                    />
+            </LinearLayout>
+
+
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="Description:"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:textStyle="bold"/>
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="My description goes here..."
+                android:textSize="15sp"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:id="@+id/descriptionTV"/>
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="Interests:"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:textStyle="bold"/>
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="Running Coding Traveling Watching Netflix"
+                android:textSize="15sp"
+                android:id="@+id/interestsTV"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
             <Button
-                android:layout_width="0dp"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:text="OK"
-                android:layout_weight="0.25"
-                android:id="@+id/enter_status"
-                android:onClick="enterStatus"/>
+                android:text="Submit"
+                android:id="@+id/submitBT"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
         </LinearLayout>
 
+    </ScrollView>
 
-        <TextView
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:text="University:"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
-        <TextView
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:text="Description:"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
-        <TextView
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:text="Interests:"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
-
-
-    </LinearLayout>
 
 
 
