--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,8 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:onClick="handleLoginClicked"
-        android:id="@+id/login_button"/>
+        android:id="@+id/login_button"
+        android:background="@color/button"/>
     <TextView
         android:layout_width="300dp"
         android:layout_height="wrap_content"
