--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,8 @@
                 android:gravity="center"
                 android:textSize="25sp"
                 android:id="@+id/full_name"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:textColor="@color/Header"/>
             <LinearLayout
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
@@ -50,7 +51,8 @@
                 android:textSize="17dp"
                 android:text="About User"
                 android:textStyle="bold"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:textColor="@color/Header"/>
             <LinearLayout
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
@@ -62,12 +64,14 @@
                     android:text="University:"
                     android:layout_weight="0.3"
                     android:textStyle="bold"
+                    android:textColor="@color/colorPrimaryDark"
                     />
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Georgia Institute of Technology"
-                    android:layout_weight="0.7"/>
+                    android:layout_weight="0.7"
+                    android:textColor="@color/text"/>
             </LinearLayout>
 
             <TextView
@@ -75,22 +79,26 @@
                 android:layout_height="wrap_content"
                 android:text="Description:"
                 android:textStyle="bold"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:textColor="@color/colorPrimaryDark"/>
             <TextView
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:text="Hey! My name is blah and I come from blah and enjot blahing."
-                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:textColor="@color/text"/>
             <TextView
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:text="Interests:"
                 android:textStyle="bold"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:textColor="@color/colorPrimaryDark"/>
             <TextView
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:text="Running Coding Traveling Watching Netflix"/>
+                android:text="Running Coding Traveling Watching Netflix"
+                android:textColor="@color/text"/>
         </LinearLayout>
 
 
