--- a/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/app/src/main/res/layout/fragment_profile_settings.xml
@@ -118,6 +118,14 @@
                 android:id="@+id/submitBT"
                 android:background="@color/button"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/logoutBT"
+                android:text="Logout"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
         </LinearLayout>
 
     </ScrollView>
