--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,6 +13,7 @@
             android:gravity="center"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/picture"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -42,7 +43,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Available"
-                    android:textSize="18dp"/>
+                    android:textSize="18dp"
+                    android:id="@+id/status_text" />
             </LinearLayout>
 
             <TextView
@@ -86,7 +88,8 @@
                 android:layout_height="wrap_content"
                 android:text="Hey! My name is blah and I come from blah and enjot blahing."
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:textColor="@color/text"/>
+                android:textColor="@color/text"
+                android:id="@+id/interests" />
             <TextView
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
