added button to list

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,11 @@
     android:orientation="vertical"
     android:gravity="center"
     tools:context="com.aroundme.around.controllers.LoginActivity">
+    <ImageView
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_margin="50dp"
+        android:src="@drawable/ic_templogo"/>
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
