--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -27,7 +27,9 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/feed_list"
                 android:scrollbars="vertical"
-                android:layout_marginBottom="@dimen/activity_vertical_margin">
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:padding="10dp">
+
             </android.support.v7.widget.RecyclerView>
         </LinearLayout>
         <LinearLayout
