--- a/app/src/main/res/layout/fragment_nearby.xml
+++ b/app/src/main/res/layout/fragment_nearby.xml
@@ -27,6 +27,17 @@
                 android:id="@+id/people_list">
             </android.support.v7.widget.RecyclerView>
         </LinearLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:paddingBottom="56dp"
+            android:src="@drawable/ic_format_list_bulleted">
+        </android.support.design.widget.FloatingActionButton>
 
     </RelativeLayout>
 
