--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_height="25dp"
             android:src="@drawable/ic_map"
             android:background="@color/bottom_bar"
-            android:layout_weight="0.25"
+            android:layout_weight="0.20"
             android:layout_gravity="center"
             android:id="@+id/map_button"
             android:onClick="handleMapClicked"
@@ -31,8 +31,8 @@
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:src="@drawable/ic_feed"
-            android:layout_weight="0.25"
+            android:src="@drawable/ic_feedic"
+            android:layout_weight="0.20"
             android:background="@color/bottom_bar"
             android:layout_gravity="center"
             android:id="@+id/feed_button"
@@ -41,8 +41,18 @@
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
+            android:src="@drawable/ic_messaging"
+            android:layout_weight="0.20"
+            android:background="@color/bottom_bar"
+            android:layout_gravity="center"
+            android:id="@+id/message_button"
+            android:onClick="handleMessageClicked"
+            android:scaleType="fitCenter"/>
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:src="@drawable/ic_my_profile"
-            android:layout_weight="0.25"
+            android:layout_weight="0.20"
             android:background="@color/bottom_bar"
             android:layout_gravity="center"
             android:id="@+id/profile_button"
@@ -52,7 +62,7 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/ic_settings"
-            android:layout_weight="0.25"
+            android:layout_weight="0.20"
             android:background="@color/bottom_bar"
             android:layout_gravity="center"
             android:id="@+id/settings_button"
