--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,7 +39,7 @@
                     android:textSize="25sp"
                     android:id="@+id/full_name"
                     android:textColor="@color/Header"
-                    android:layout_marginEnd="@dimen/activity_vertical_margin"/>
+                    android:layout_marginEnd="10dp"/>
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
